--- a/public/index.html
+++ b/public/index.html
@@ -73,4 +73,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+    window.Telegram.WebApp.disableVerticalSwipes()
+
+  </script>
 </html>
