--- a/public/index.html
+++ b/public/index.html
@@ -74,5 +74,28 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+     function ensureDocumentIsScrollable() {
+        const isScrollable =
+          document.documentElement.scrollHeight > window.innerHeight;
+        if (!isScrollable) {
+          document.documentElement.style.setProperty(
+            "height",
+            "calc(100vh + 1px)",
+            "important"
+          );
+        }
+      }
+      function preventCollapse() {
+        if (window.scrollY === 0) {
+          window.scrollTo(0, 1);
+        }
+      }
+
+     const scrollableElement = document.getElementById("scrollable-element");
+      scrollableElement.addEventListener("touchstart", preventCollapse);
+
+      window.addEventListener("load", ensureDocumentIsScrollable);
+  </script>
 
 </html>
